css to stop text jumping when renaming

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -70,6 +70,8 @@ html {
     padding: 5px;
     margin: 0px;
     margin-top: -5px;
+    text-align: left;
+    margin-left: 40%;
 }
 
 #matrix_canvas{
